[package]
name = "hello-wasm"
edition = "2018"
version = "0.1.0"
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
